@@ -43,7 +43,8 @@ package lu.fisch.structorizer.arranger;
  *      Kay Gürtzig     2020-04-01      Enh. #440: Group export to PapDesigner inserted in popup menu
  *      Kay Gürtzig     2020-06-06      Issue #868/#870: Suppression of group export in noExportImport mode
  *      Kay Gürtzig     2020-12-29      Issue #901: Time-consuming actions set WAIT_CURSOR now
- *      Kay Gürtzig     2020-12-31      Bugfix #902: Must regain focus after selecting, cancel add/move on closing the pane
+ *      Kay Gürtzig     2020-12-31      Bugfix #902: Must regain focus after selecting; cancel add/move action
+ *                                      on quitting the pane; confirmation request before dissolving groups
  *
  ******************************************************************************************************
  *
@@ -253,6 +254,9 @@ public class ArrangerIndex extends LangTree implements MouseListener, LangEventL
 	protected static final LangTextHolder msgMembersComplete = new LangTextHolder("Group is complete: No outward references");
 	protected static final LangTextHolder msgGroupMembersChanged = new LangTextHolder("The set of member diagrams was modified.");
 	protected static final LangTextHolder msgGroupMembersMoved = new LangTextHolder("The coordinates of some member diagrams were changed.");
+	// START KGU#900 2020-12-31: Issue #902
+	protected static final LangTextHolder msgConfirmDissolve = new LangTextHolder("Sure to dissolve these group(s)?\n%");
+	// END KGU#900 2020-12-31
 	
 	public static class ArrangerIndexCellRenderer extends DefaultTreeCellRenderer {
 		private final static ImageIcon mainIcon = IconLoader.getIcon(22);
@@ -371,7 +375,10 @@ public class ArrangerIndex extends LangTree implements MouseListener, LangEventL
 				arrangerIndexAttachToGroup();
 			}
 			else if (name.equals("DISSOLVE")) {
-				arrangerIndexDissolveGroup();
+				// START KGU#900 2020-12-31: Issue #902 - better ask in this case
+				//arrangerIndexDissolveGroup();
+				arrangerIndexDissolveGroup(false);
+				// END KGU#900 2020-12-31
 			}
 			// END KGU#626 2019-01-05
 			// START KGU#630 2019-01-13: Enh. #662/2
@@ -664,7 +671,7 @@ public class ArrangerIndex extends LangTree implements MouseListener, LangEventL
 		popupIndexExpandGroup.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_G, KeyEvent.CTRL_DOWN_MASK | KeyEvent.SHIFT_DOWN_MASK));
 
 		popupIndex.add(popupIndexDissolve);
-		popupIndexDissolve.addActionListener(new ActionListener() { public void actionPerformed(ActionEvent event) { arrangerIndexDissolveGroup(); } });
+		popupIndexDissolve.addActionListener(new ActionListener() { public void actionPerformed(ActionEvent event) { arrangerIndexDissolveGroup(true); } });
 		popupIndexDissolve.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_NUMBER_SIGN, KeyEvent.CTRL_DOWN_MASK));
 
 		popupIndex.add(popupIndexDetach);
@@ -1362,11 +1369,31 @@ public class ArrangerIndex extends LangTree implements MouseListener, LangEventL
 
 	/** Dissolves the selected group(s) i.e. detaches all contained diagrams. If a diagram gets
 	 * orphaned then it will be attached to the default group instead. The group may be deleted
-	 * if it hadn't been associated to a file.
+	 * if it hadn't been associated to a file.<br/>
+	 * In case {@code viaMenu} is {@code false} or more than one group is selected, a confirmation
+	 * request will pop up.
+	 * @param viaMenu - {@code true} if launched form a menu item, {@code false} otherwise
+	 * (via accelerator)
 	 */
-	private boolean arrangerIndexDissolveGroup() {
+	private boolean arrangerIndexDissolveGroup(boolean viaMenu) {
 		Collection<Group> groups = this.arrangerIndexGetSelectedGroups(false);
 		// TODO make a user query (multiple selection)
+		// START KGU#900 2020-12-31: Issue #902 better ask for confirmation in certain cases
+		if (!viaMenu || groups.size() > 1) {
+			StringBuilder groupNames = new StringBuilder();
+			for (Group group: groups) {
+				groupNames.append("\n - ");
+				groupNames.append(group.getName());
+			}
+			int answer = JOptionPane.showConfirmDialog(this,
+					msgConfirmDissolve.getText().replace("%", groupNames.toString()),
+					this.popupIndexDissolve.getText(),
+					JOptionPane.WARNING_MESSAGE);
+			if (answer != JOptionPane.OK_OPTION) {
+				return false;
+			}
+		}
+		// END KGU#900 2020-12-31
 		boolean done = true;
 		for (Group group: groups) {
 			done = Arranger.getInstance().dissolveGroup(group.getName(), this) && done;
